[project]
name = "dagster-hello-world"
version = "0.1.0"
description = "simple sample for Dagster"
readme = "README.md"
authors = [
    { name = "Chi Man Lei", email = "chimanlei@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dagster==1.9.8",
    "dagster-postgres==0.25.8",
]

[dependency-groups]
dev = [
    "dagster-webserver==1.9.8",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
