[project]
name = "dagster-hello-world"
version = "0.1.0"
description = "simple sample for Dagster"
readme = "README.md"
authors = [
    { name = "Chi Man Lei", email = "chimanlei@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dagster==1.10.1",
    "dagster-postgres",
]

[dependency-groups]
dev = [
    "dagster-webserver==1.10.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
