[project]
name = "dagster-hello-world"
version = "0.1.2"
description = "simple sample for Dagster"
readme = "README.md"
authors = [
    { name = "Chi Man Lei", email = "chimanlei@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dagster==1.10.13",
    "dagster-postgres",
]

[dependency-groups]
dev = [
    "dagster-webserver==1.10.13",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.uv]
native-tls = true

# [[tool.uv.index]]
# name = "devpi"
# url = "https://devpi.k8s.orb.local/root/pypi"
# default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
